# JPMC-ML-Project

./: .dockerignore  .gitignore  Dockerfile  FRI_Applied_Scientist_Audit.ipynb  README.md  STARTUP_CONFIG.md  docker-compose.yml  implementation_plan.md  pyproject.toml  requirements.txt
artifacts/: baseline_metrics.json  data_validation_report.json  eda_summary.json
artifacts/graph/: account_explanation_sample.json  graph_baseline_metrics.json  graph_embedding_metrics.json  pytorch_gcn_metrics.json
artifacts/temporal/: drift_events.jsonl  temporal_drift_report.json
backend/: README.md  docker-compose.yml  pyproject.toml
backend/configs/: default.yaml
backend/docs/: Documentation_Roadmap.md  Financial_Risk_Intelligence_Project_Master_Guide.md
backend/scripts/: audit_advanced_models.py  audit_train_gnn.py  fetch_amlsim_repo.sh  run_explainability.py  run_graph_analytics.py  run_phase3_reports.py  run_temporal_intelligence.py  simulate_drift.py  train_baseline.py  train_graph_embedding_baseline.py  train_pytorch_gcn.py
configs/: default.yaml
docs/final/: 01_System_Architecture.md  02_Machine_Learning_Models.md  03_Training_Inference_and_XAI.md  04_MLOps_and_Deployment.md  Project_Status_Report.md  README.md  Recent_Changes_Report.md
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
scripts/: build_canonical_dataset.py  run_api.py  run_complete_evaluation.py  run_explainability.py  train_baseline.py  train_graph_baseline.py  train_graph_embedding_baseline.py  train_pytorch_gcn.py
(+106 files in other folders)
