[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fri"
version = "0.1.0"
description = "Financial Risk Intelligence platform scaffold built on IBM AMLSim."
readme = "docs/Documentation_Roadmap.md"
requires-python = ">=3.10"
dependencies = [
  "networkx>=3.3",
  "pandas>=2.2",
  "PyYAML>=6.0",
  "scikit-learn>=1.5",
  "torch>=2.8",
  "torch-geometric>=2.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
